Unit test for frontend components (#25)
* setup test dev depenedencies

* dependencies setup

* added init test

* update render test

* update render test

* fix test dependencies and setup

* config test env and update test case

* add ttd call

* update doc

* update doc

* added sinion

* added unit test for input component

* messages unit test added

* fix header

* fix message error to not use id and update messages component test

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "NODE_ENV=test mocha --require @babel/register --require ignore-styles --require test/helpers/setup.js test/*.test.js",
+    "ttd": "npm test -- --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -21,5 +22,22 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "@babel/register": "^7.0.0",
+    "babel-plugin-inline-react-svg": "^1.0.1",
+    "babel-plugin-react-html-attrs": "^2.1.0",
+    "babel-preset-react-app-babel-7": "^4.0.2-0",
+    "chai": "^4.2.0",
+    "chai-enzyme": "^1.0.0-beta.1",
+    "cheerio": "^1.0.0-rc.2",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "^13.2.0",
+    "mocha": "^6.0.2",
+    "sinon": "^7.2.7"
+  }
 }
