--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "2.1.5",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
