--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,10 @@
 Click==7.0
 Django==2.1.7
 Flask==1.0.2
+Flask-Cors==3.0.7
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.1
 pytz==2018.9
+six==1.12.0
 Werkzeug==0.14.1
