--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
-    "react-to-target-auto-scroll": "^1.0.4",
+    "react-scrollable-feed": "^1.0.3",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0",
