--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,18 @@
+beautifulsoup4==4.7.1
+certifi==2019.3.9
+chardet==3.0.4
 Click==7.0
 Django==2.1.7
 Flask==1.0.2
 Flask-Cors==3.0.7
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.1
+psycopg2==2.7.7
 pytz==2018.9
+requests==2.21.0
 six==1.12.0
+soupsieve==1.8
+urllib3==1.24.1
 Werkzeug==0.14.1
