--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "ignore-styles": "^5.0.1",
     "jsdom": "^13.2.0",
     "mocha": "^6.0.2",
+    "nock": "^10.0.6",
     "redux-mock-store": "^1.5.3",
     "sinon": "^7.2.7"
   }
