--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,5 @@
+atomicwrites==1.3.0
+attrs==19.1.0
 beautifulsoup4==4.7.1
 certifi==2019.3.9
 chardet==3.0.4
@@ -9,7 +11,11 @@ idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.1
+more-itertools==6.0.0
+pluggy==0.9.0
 psycopg2==2.7.7
+py==1.8.0
+pytest==4.3.1
 pytz==2018.9
 requests==2.21.0
 six==1.12.0
