--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,6 +21,7 @@ more-itertools==6.0.0
 pluggy==0.9.0
 protobuf==3.7.0
 psycopg2==2.7.7
+psycopg2-binary==2.7.7
 py==1.8.0
 pyasn1==0.4.5
 pyasn1-modules==0.2.4
