--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
       - image: circleci/node:8.12.0
     steps:
       - checkout
+      - run:
           name: Install frontend dependencies
           command: |
             cd frontend
