--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - run:
           name: Frontend unit testing
           command: |
-            ls
+            cd frontend
             npm test
 
 workflows:
