configure frontend environment and server connection

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -19,6 +19,8 @@ RUN npm run build
 
 ### STAGE 2: Production Environment ###
 FROM nginx:1.14.2-alpine
+RUN rm -rf /etc/nginx/conf.d
+COPY conf /etc/nginx
 COPY --from=build /usr/src/app/build /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
