--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,6 +3,8 @@ FROM python:3.7
 LABEL author="Benny Hwang"
 
 RUN apt-get update && apt-get install -y \
+    nginx \
+    build-essential \
 	python \
 	python-pip \
 	&& rm -rf /var/lib/apt/lists/*	
@@ -19,4 +21,6 @@ RUN chmod +x ./start_tests.sh
 
 EXPOSE 9999
 
-CMD ["python3", "./app.py"]
+COPY nginx.conf /etc/nginx
+RUN chmod +x ./start.sh
+CMD ["./start.sh"]
