--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,8 +10,6 @@ COPY package.json /usr/src/app/package.json
 RUN npm install
 RUN npm install react-scripts -g
 COPY . /usr/src/app
-
-WORKDIR frontend
 RUN npm install
 
 EXPOSE 3000
@@ -19,8 +17,8 @@ RUN npm run build
 
 ### STAGE 2: Production Environment ###
 FROM nginx:1.14.2-alpine
-RUN rm -rf /etc/nginx/conf.d
-COPY conf /etc/nginx
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /usr/src/app/build /usr/share/nginx/html
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+
+CMD sed -i -e 's/$PORT/'"$PORT"'/g' /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'
