--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,8 +3,8 @@ FROM python:3.7
 LABEL author="Benny Hwang"
 
 RUN apt-get update && apt-get install -y \
-    nginx \
-    build-essential \
+  nginx \
+  build-essential \
 	python \
 	python-pip \
 	&& rm -rf /var/lib/apt/lists/*	
@@ -21,6 +21,6 @@ RUN chmod +x ./start_tests.sh
 
 EXPOSE 9999
 
-COPY nginx.conf /etc/nginx
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 RUN chmod +x ./start.sh
 CMD ["./start.sh"]
