--- a/backend/uwsgi.ini
+++ b/backend/uwsgi.ini
@@ -3,7 +3,8 @@ module = app:app
 uid = www-data
 gid = www-data
 master = true
-processes = 10
+processes = 4
+http-socket = :$(PORT)
 socket = /tmp/uwsgi.socket
 chmod-sock = 664
 vacuum = true
