--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,74 @@
 version: 2
+orbs:
+  heroku: circleci/heroku@1.0.0
 jobs:
-  build:
+  frontend_build_and_test:
+    docker:
+      - image: circleci/node:8.12.0
+    steps:
+      - checkout
+      - run:
+          name: Install frontend dependencies
+          command: |
+            cd frontend
+            npm install
+      - run:
+          name: Frontend unit testing
+          command: |
+            cd frontend
+            npm test
+      - run:
+          name: deploy
+          command: |
+            cd frontend
+            npm test  
+  backend_build_and_test:
+    docker:
+      - image: circleci/python:3.6
+    steps:
+      - checkout
+      - run:
+          name: Install backend dependencies
+          command: |
+            sudo pip install -r ./backend/requirements.txt
+      - run:
+          name: Backend unit testing
+          command: |
+            ./backend/start_tests.sh
+  deploy:
     machine:
-      image: circleci/classic:201903-01
-    - run:
-      name: Install Docker Compose
-      command: |
-        curl -L https://github.com/docker/compose/releases/download/1.19.0/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
-        chmod +x ~/docker-compose
-        sudo mv ~/docker-compose /usr/local/bin/docker-compose
-    - setup_remote_docker
-    - run:
-      name: Build Docker Container
-      command: |
-        docker-compose build
-        docker-compose up -d
+      image: circleci/classic:latest
+    steps:
+      - checkout
+      - run:
+          name: "Install Heroku CLI, if necessary"
+          command: |
+            if [[ $(command -v heroku) == "" ]]; then
+              curl https://cli-assets.heroku.com/install.sh | sh
+            else
+              echo "Heroku is already installed. No operation was performed."
+            fi
+      - run:
+          name: "Heroku login"
+          command: |
+            heroku container:login --username=$HEROKU_USERNAME --password=$HEROKU_PASSWORD
+      - run:
+          name: Deploy frontend
+          command: |
+            cd frontend
+            heroku container:push web -a $HEROKU_FRONTEND
+            heroku container:release web -a $HEROKU_FRONTEND
+      - run:
+          name: Deploy backend
+          command: |
+            cd backend
+            heroku container:push web -a $HEROKU_BACKEND
+            heroku container:release web -a $HEROKU_BACKEND
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - frontend_build_and_test
+      - backend_build_and_test
+      - deploy
