--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,12 @@ jobs:
               echo "Heroku is already installed. No operation was performed."
             fi
       - run:
+          name: Setup Heroku
+          command: |
+            ls
+            chmod +x ./setup_heroku.sh
+            ./setup_heroku.sh
+      - run:
           name: "Heroku login"
           command: |
             docker login --username=$HEROKU_USERNAME --password=$HEROKU_API_KEY registry.heroku.com
