fix config master only

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,6 +76,9 @@ workflows:
       - frontend_build_and_test
       - backend_build_and_test
       - deploy:
+          requires:
+              - frontend_build_and_test
+              - backend_build_and_test
           filters:
-            branches:
-              only: master
+              branches:
+                only: master
