--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,76 @@
 version: 2
 jobs:
-  build:
+  frontend_build_and_test:
+    docker:
+      - image: circleci/node:8.12.0
+    steps:
+      - checkout
+      - run:
+          name: Install frontend dependencies
+          command: |
+            cd frontend
+            npm install
+      - run:
+          name: Frontend unit testing
+          command: |
+            cd frontend
+            npm test
+  backend_build_and_test:
     docker:
       - image: circleci/python:3.6
     steps:
       - checkout
-      - run: 
-          name: Install python dependencies
+      - run:
+          name: Install backend dependencies
           command: |
             sudo pip install -r ./backend/requirements.txt
-      - run: 
-          name: Unit testing
+      - run:
+          name: Backend unit testing
           command: |
             ./backend/start_tests.sh
+  deploy:
+    machine:
+      image: circleci/classic:latest
+    steps:
+      - checkout
+      - run:
+          name: "Install Heroku CLI, if necessary"
+          command: |
+            if [[ $(command -v heroku) == "" ]]; then
+              curl https://cli-assets.heroku.com/install.sh | sh
+            else
+              echo "Heroku is already installed. No operation was performed."
+            fi
+      - run:
+          name: Setup Heroku
+          command: |
+            ls
+            chmod +x ./setup_heroku.sh
+            ./setup_heroku.sh
+      - run:
+          name: "Heroku login"
+          command: |
+            docker login --username=$HEROKU_USERNAME --password=$HEROKU_API_KEY registry.heroku.com
+      - run:
+          name: Deploy frontend
+          command: |
+            cd frontend
+            heroku container:push web -a $HEROKU_FRONTEND
+            heroku container:release web -a $HEROKU_FRONTEND
+      - run:
+          name: Deploy backend
+          command: |
+            cd backend
+            heroku container:push web -a $HEROKU_BACKEND
+            heroku container:release web -a $HEROKU_BACKEND
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - frontend_build_and_test
+      - backend_build_and_test
+      - deploy:
+          filters:
+              branches:
+                only: master
