--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage": "https://whatbot9900.herokuapp.com/",
   "browserslist": [
     ">0.2%",
     "not dead",
