add require to deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,9 @@ workflows:
       - frontend_build_and_test
       - backend_build_and_test
       - deploy:
+          requires:
+            - frontend_build_and_test
+            - backend_build_and_test
           filters:
               branches:
                 only: master
