--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "marked": "^0.6.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-markdown": "^4.0.6",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
@@ -13,6 +15,7 @@
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0",
+    "remarkable": "^1.7.1",
     "uuid": "^3.3.2"
   },
   "scripts": {
