--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "echarts-for-react": "^2.0.15-beta.0",
     "marked": "^0.6.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
