--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "echarts": "^4.2.1",
     "echarts-for-react": "^2.0.15-beta.0",
+    "echarts-gl": "^1.1.1",
     "marked": "^0.6.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
