--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0",
     "remarkable": "^1.7.1",
+    "semantic-ui-react": "^0.86.0",
     "uuid": "^3.3.2"
   },
   "scripts": {
